--- a/kocsiWpf/MainWindow.xaml
+++ b/kocsiWpf/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <ListBox x:Name="kocsikLista" HorizontalAlignment="Left" Height="150" Margin="51,45,0,0" VerticalAlignment="Top" Width="111" Background="#FFD2D2D2" />
+        <ListBox x:Name="kocsikLista" HorizontalAlignment="Left" Height="172" Margin="51,45,0,0" VerticalAlignment="Top" Width="130" Background="#FFD2D2D2" />
         <Label Content="Név:" HorizontalAlignment="Left" Height="31" Margin="214,54,0,0" VerticalAlignment="Top" Width="93" HorizontalContentAlignment="Right" Background="#FFE8E8E8"/>
         <Label Content="Típus:" HorizontalAlignment="Left" Height="32" Margin="214,90,0,0" VerticalAlignment="Top" Width="93" HorizontalContentAlignment="Right" Background="#FFE8E8E8"/>
         <Label Content="Év:" HorizontalAlignment="Left" Height="32" Margin="214,164,0,0" VerticalAlignment="Top" Width="93" RenderTransformOrigin="0.527,2.47" HorizontalContentAlignment="Right" Background="#FFE8E8E8"/>
@@ -16,8 +16,8 @@
         <Label x:Name="TipusLabel" Content="" HorizontalAlignment="Left" Height="31" Margin="330,90,0,0" VerticalAlignment="Top" Width="95" Background="#FFFDEAEA"/>
         <Label x:Name="uzemanyagLabel" Content="" HorizontalAlignment="Left" Height="31" Margin="330,128,0,0" VerticalAlignment="Top" Width="95" Background="#FFFDEAEA"/>
         <Label x:Name="EvLabel" Content="" HorizontalAlignment="Left" Height="31" Margin="330,165,0,0" VerticalAlignment="Top" Width="95" Background="#FFFDEAEA"/>
-        <StackPanel x:Name="images" HorizontalAlignment="Left" Height="163" Margin="515,54,0,0" VerticalAlignment="Top" Width="244"/>
-        <Button x:Name="torles" Content="Törlés" HorizontalAlignment="Left" Height="55" Margin="51,217,0,0" VerticalAlignment="Top" Width="111" Background="#FFF3B4B4"/>
+        <StackPanel x:Name="images" HorizontalAlignment="Left" Height="220" Margin="452,55,0,0" VerticalAlignment="Top" Width="335"/>
+        <Button x:Name="torles" Content="Törlés" HorizontalAlignment="Left" Height="55" Margin="60,245,0,0" VerticalAlignment="Top" Width="112" Background="#FFF3B4B4" Click="torles_Click_1"/>
 
 
     </Grid>
